--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.2'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
 
     //lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -55,4 +58,7 @@ dependencies {
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+
+    //https://github.com/bumptech/glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
